force-app/main/default/objects/Supplier_Capacity__c/Supplier_Capacity__c.object-meta.xml
<CustomObject>
    <label>サプライヤー供給キャパシティ</label>
    <pluralLabel>サプライヤー供給キャパシティ</pluralLabel>
    <nameField>
        <label>キャパシティ名</label>
        <displayFormat>CAP-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>