force-app/main/default/objects/Supplier_Capacity__c/fields/Effective_From__c.field-meta.xml
<CustomField>
    <fullName>Effective_From__c</fullName>
    <label>有効開始日</label>
    <type>Date</type>
</CustomField>