force-app/main/default/objects/Supplier_Capacity__c/fields/Manufacturing_Site__c.field-meta.xml
<CustomField>
    <fullName>Manufacturing_Site__c</fullName>
    <label>製造拠点</label>
    <type>MasterDetail</type>
    <referenceTo>Manufacturing_Site__c</referenceTo>
    <relationshipName>Supplier_Capacities</relationshipName>
    <relationshipLabel>供給キャパシティ</relationshipLabel>
    <relationshipOrder>0</relationshipOrder>
</CustomField>