force-app/main/default/objects/Supplier_Capacity__c/fields/Monthly_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Capacity__c</fullName>
    <label>月産上限数量</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
    <required>true</required>
</CustomField>