force-app/main/default/objects/Supplier_Capacity__c/fields/Part_Name__c.field-meta.xml
<CustomField>
    <fullName>Part_Name__c</fullName>
    <label>部品名</label>
    <type>Text</type>
    <length>100</length>
</CustomField>