force-app/main/default/objects/Supplier_Capacity__c/fields/Part_Number__c.field-meta.xml
<CustomField>
    <fullName>Part_Number__c</fullName>
    <label>部品番号</label>
    <type>Text</type>
    <length>50</length>
    <required>true</required>
</CustomField>